--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -9,17 +9,21 @@
     <fragment
         android:id="@+id/fragment1"
         android:name="com.example.lab6_fragments.FragmentOne"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintBottom_toTopOf="@+id/fragment2"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintRight_toLeftOf="@id/fragment2"
+        app:layout_constraintBottom_toBottomOf="parent" />
 
     <fragment
         android:id="@+id/fragment2"
         android:name="com.example.lab6_fragments.FragmentTwo"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@+id/fragment1"
-        app:layout_constraintBottom_toBottomOf="parent"/>
-
+        app:layout_constraintLeft_toRightOf="@id/fragment1"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintRight_toRightOf="parent"/>
+    
 </androidx.constraintlayout.widget.ConstraintLayout>
