--- a/app/src/main/res/layout/fragment_two.xml
+++ b/app/src/main/res/layout/fragment_two.xml
@@ -11,6 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal|center_vertical"
-        android:textSize="20sp"
+        android:textSize="30sp"
+        android:textColor="@color/white"
         android:text="Текстовое поле" />
 </FrameLayout>
